<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BBOnLine</string>
    <string name="login_label">BB</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="login_head_desp">登录界面头像</string>
    <string name="login_username_desp">登录界面用户名图标</string>
    <string name="login_pwd_desp">登录界面密码图标</string>
    <string name="login_username_hint">用户名</string>
    <string name="login_pwd_hint">密码</string>
    <string name="login_regist_text">注册</string>
    <string name="login_login_text">登录</string>
    <string name="login_forgetpwd"><u>忘记密码？</u></string>
    <string name="login_logining">登录中</string>
    <string name="regist_regist">注&#160;册</string>
    <string name="register_name">._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ~!@#$%^*()+-=:?</string>
    <string name="regist_head_desp">注册界面头像</string>
    <string name="regist_cellphone_text">手机号：</string>
    <string name="regist_pwd_text">密码：</string>
    <string name="regist_getnum_text">获取验证码</string>
    <string name="regist_readagreement">&#160;&#160;我已阅读《BB用户协议》</string>
    <string name="regist_verification_text">验证码：</string>
    <string name="regist_verification_resend"><u>确定</u></string>
    <string name="title_activity_regist_info">RegistInfoActivity</string>
	<string name="regist_info_nickname">昵称</string>
	<string name="regist_info_sex">性别</string>
	<string name="regist_info_area">地区</string>
	<string name="regist_info_signature">个性签名</string>
	<string name="retrieve_cellphone">手机号：</string>

    <string name="module_near">附近</string>
    <string name="module_linkman">联系人</string>
    <string name="module_message">消息</string>
    <string name="module_me">我</string>
    <string name="nearby_resource">资源</string>
    <string name="nearby_need">需求</string>
    <string name="nearby_user">用户</string>
    <string name="bbnum_colon">BB号：</string>
    <string name="nearby_bb_head_desp">BB用户的头像</string>
    <string name="bb_hint_content">内容</string>
    <string name="bb_hint_title">标题</string>
    <string name="bb_location">地点</string>
    <string name="bb_hint_price">价格</string>
    <string name="bb_set_location">地理位置</string>
    <string name="bb_hint_location_search">输入地理位置</string>
    <string name="yuan">元</string>
    <string name="item_nearby_distance">距离：</string>
    <string name="item_nearby_bb_time">时间：</string>
    <string name="item_nearby_bb_position">地点：</string>
    <string name="item_nearby_bb_btn">我要帮忙</string>
    <string name="item_nearby_user_nickname">昵称：</string>
    <string name="item_nearby_user_credit">信用指数：</string>
    <string name="item_nearby_user_btn">添加好友</string>
    <string name="title_activity_bbdetail">BBDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_image_detail">ImageDetailActivity</string>
    <string name="bbdetail_btn_comment">发送</string>
    <string name="bbdetail_forward">转发</string>
    <string name="bbdetail_praise">点赞</string>

    <!-- 模块——我 -->
    <string name="userinfo_account">帐号</string>
    <string name="userinfo_nickname">昵称</string>
    <string name="userinfo_detail_portrait">头像</string>
    <string name="userinfo_detail_username">昵称</string>
    <string name="userinfo_detail_bbnumber">BB号</string>
    <string name="userinfo_detail_user_gender">性别</string>
    <string name="userinfo_detail_user_district">地区</string>
    <string name="userinfo_detail_personality_signature">个性签名</string>
    <string name="userinfo_detail_credit">信用指数</string>
    <string name="user_gender_man">男</string>
    <string name="user_gender_woman">女</string>
    <string name="user_nickname_default">未填写</string>
    <string name="user_bbnumber_default">未设置</string>
    <string name="user_gender">性别</string>
    <string name="user_district_default">重庆</string>
    <string name="user_psignature_default">未填写</string>
    <string name="tv_save">保存</string>
    <string name="tv_set_nickname">修改昵称</string>
    <string name="tv_set_bbnumber">设置BB号</string>
    <string name="tv_set_bbnumber_hint1">BB号只能输入一次，且不能更改</string>
    <string name="tv_set_bbnumber_hint2">格式：只能由字母、数字及“_”、“-”组成</string>
    <string name="tv_set_district">修改地区</string>
    <string name="user_district_now_location">当前位置</string>
    <string name="user_district_please_choose">请选择</string>
    <string name="tv_set_psignature">设置个性签名</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="whether_accept_news">接受推送</string>
    <string name="app_version">版本号</string>
    <string name="check_update">检查更新</string>
    <string name="user_feedback">用户反馈</string>
    <string name="about_us">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="btn_portrait_save">保存</string>

    <!-- 模块——联系人 -->
    <string name="btn_linkman_detailinfo_send_msg">发消息</string>
    <string name="edt_hint_input_bb_number">请输入bb号</string>
    <string name="tv_new_friends">新朋友</string>

    <!--模块——消息-->
    <string name="longClick_speak">长按说话</string>
    <string name="news_picture">照片</string>
    <string name="news_camera">拍照</string>
    <string name="voice_top_cancel_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="linkman_search_hint">搜索...</string>
    <string name="xlistview_footer_hint_ready">松开加载更多</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="add_avator">头像</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>

</resources>
