<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_nearby_BB"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:text="@string/login_label"
            android:textColor="@color/login_et_text_normal"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tv_nearby_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:text="@string/nearby_user"
            android:textColor="@color/login_et_text_normal"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tv_nearby_resource"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:text="@string/nearby_resource"
            android:textColor="@color/login_et_text_normal"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="12px"
        android:background="@color/toolbar">
        <View
            android:id="@+id/view_nearby_indicator"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/nearby_fragment_indicator"/>
    </LinearLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_nearby"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>
</LinearLayout>
