<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/regist_info_background"
    tools:context="android.BB.ui.nearby.UserDetailActivity">

    <include
        android:id="@+id/toolbar_user_detail"
        layout="@layout/toolbar_center_text"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:padding="16dp">
        <ImageView
            android:id="@+id/img_user_detail_head"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:scaleType="fitXY"
            android:contentDescription="@null"/>
        <TextView
            android:id="@+id/tv_user_detail_bbnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_user_detail_head"
            android:layout_toEndOf="@id/img_user_detail_head"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/bbnum_colon"/>
        <ImageView
            android:id="@+id/img_user_detail_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_user_detail_bbnum"
            android:layout_toEndOf="@id/tv_user_detail_bbnum"
            android:layout_alignBottom="@id/tv_user_detail_bbnum"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:src="@mipmap/man"
            android:contentDescription="@null"/>
        <TextView
            android:id="@+id/tv_user_detail_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_user_detail_bbnum"
            android:layout_alignStart="@id/tv_user_detail_bbnum"
            android:layout_below="@id/tv_user_detail_bbnum"
            android:layout_marginTop="8dp"
            android:text="@string/item_nearby_user_nickname"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="16dp">
        <TextView
            android:id="@+id/tv_user_detail_area_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist_info_area"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/tv_user_detail_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_user_detail_area_label"
            android:layout_toEndOf="@id/tv_user_detail_area_label"
            android:layout_marginLeft="56dp"
            android:layout_marginStart="56dp"/>
        <View
            android:id="@+id/stroke1_user_detail"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/regist_info_stroke"
            android:layout_below="@id/tv_user_detail_area_label"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tv_user_detail_signature_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stroke1_user_detail"
            android:text="@string/regist_info_signature"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/tv_user_detail_signature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_user_detail_area"
            android:layout_alignStart="@id/tv_user_detail_area"
            android:layout_alignBaseline="@id/tv_user_detail_signature_label"/>
        <View
            android:id="@+id/stroke2_user_detail"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/regist_info_stroke"
            android:layout_below="@id/tv_user_detail_signature_label"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/tv_user_detail_credit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stroke2_user_detail"
            android:text="@string/userinfo_detail_credit"
            android:textColor="@android:color/black"/>
        <RatingBar
            android:id="@+id/ratingbar_user_detail_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyRatingBar"
            android:layout_alignLeft="@id/tv_user_detail_area"
            android:layout_alignStart="@id/tv_user_detail_area"
            android:layout_alignBottom="@id/tv_user_detail_credit_label"
            android:numStars="5"
            android:isIndicator="true"/>
    </RelativeLayout>
    <Button
        android:id="@+id/btn_user_detail_add"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/orange_btn"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/item_nearby_user_btn"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>
</LinearLayout>
