<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/layout_normal">
    <EditText
        android:id="@+id/et_bb_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@null"
        android:hint="@string/bb_hint_title"
        android:textSize="18sp"
        android:textColorHint="@color/regist_info_stroke"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/regist_info_stroke"/>
    <EditText
        android:id="@+id/et_bb_content"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:gravity="start"
        android:padding="12dp"
        android:background="@null"
        android:maxLines="4"
        android:hint="@string/bb_hint_content"
        android:textSize="18sp"
        android:textColorHint="@color/regist_info_stroke"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/regist_info_stroke"/>
    <LinearLayout
        android:id="@+id/layout_bb_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_no_shadow"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_bb_location"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null"
            android:src="@mipmap/main_bottom_nearby_normal"/>
        <TextView
            android:id="@+id/tv_bb_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/bb_location"
            android:textColor="@color/regist_info_stroke"
            android:textSize="18sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/regist_info_stroke"/>
    <RelativeLayout
        android:id="@+id/layout_bb_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_no_shadow">
        <ImageView
            android:id="@+id/img_bb_wallet"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:src="@mipmap/wallet"/>
        <EditText
            android:id="@+id/et_bb_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_bb_wallet"
            android:background="@null"
            android:padding="12dp"
            android:hint="@string/bb_hint_price"
            android:textColorHint="@color/regist_info_stroke"
            android:textSize="18sp"
            android:inputType="numberDecimal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"
            android:text="元"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>
    </RelativeLayout>
</LinearLayout>
